# Gestionnaire-multimedia

./: Cargo.toml  Markdown.md  Playlist.pls  README.adoc  README.md  test.md
src/: Markdown.md  Playlist.pls  cli.rs  lib.rs  main.rs  menu.rs  menu2.rs  metafile.rs  musicfile.rs  save.json  scan.rs  scrap.rs  search.rs  tag.rs  test.md  write2_playlist.rs  write2md.rs
