[package]
name = "medman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
walkdir = "2.3.2"
mp3-metadata = "0.3.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive ="1.0"
rustc-serialize = "0.3.24"
stemmer = "0.3.2"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.8.0"
noise_search_deps_rocksdb = "0.1.1"
varint = "0.9.0"
uuid = { version = "0.8.2", features = ["v4"] }
clap = "2.33.3"
markdown-gen = "1.2.1"
console = "0.15.0"

